tests/errors/generic_null_to_nonnull_assignment.dang
# Null flowing through a generic function cannot initialize a non-null field
id(x: a): a { x }

result: Int! = id(null)
